<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/unsplash"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logoipsum_327" />

            <TextView
                android:id="@+id/logoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#00EE6125"
                android:text="@string/App"
                android:textColor="#0B0000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="John doe"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="0987654321"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#00FFFFFF" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="johndoe@email.com"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/have_already_an_account_log_in"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/terms_and_conditions"
        android:layout_marginTop="12dp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"/>

</LinearLayout>